--- a/Пиццаландия2/contakt.html
+++ b/Пиццаландия2/contakt.html
@@ -4,10 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style/style.css">
-	<title>Пиццаландия</title>
+	<title>Контакты</title>
 </head>
 <body>
 	<table width="100%">
+      <table width="100%">
 			<tr>
 				<td>
 					<table class="orange_fon" width="100%">
@@ -20,30 +21,12 @@
 							<td><img src="img./Phone.png"></td>
 						</tr>
 					</table>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<img src="img/Fon.png" width="100%">
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<img src="img/Many.png" width="100%">
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<table class="black_Fon" width="100%">
-						<tr>
-							<td class="black_Fon">ООО"Пиццаландия" Все права защищены</td>
-							<td width="15%"></td>
-							<td class="black_Fon" style="text-align: right;">8(904)264-63-73</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-	</table>
-
+					<table width="100%<table width="100%">
+							<tr>
+								<td>
+									<img src="img/Pizza17.png" width="100%">
+								</td>
+							</tr>
+						</table>
 </body>
 </html>
