--- a/Пиццаландия2/men.html
+++ b/Пиццаландия2/men.html
@@ -14,19 +14,19 @@
 				<td>
 					<table class="orange_fon" width="100%">
 						<tr>
-							<td><img src="img/logo.png" style="padding: 10px"></td>
+							<td><a href="index.html" class="red_text"><img src="img/logo.png" style="padding: 10px"></a></td>
 							<td width="15%"></td>
 							<td class="red_text"><a href="men.html">Меню</a></td>
-							<td  class="red_text">Контакты</td>
+							<td  class="red_text"><a href="contakt.html" class="red_text">Контакты</a></td>
 							<td width="15%"></td>
 							<td><img src="img./Phone.png"></td>
 						</tr>
 					</table>
 					<table width="100%" class="darkorange_fon">
 						<tr>
-							<td width="10%" class="padding_menu">Пицца</td>
+							<td width="10%" class="padding_menu"><a href="men.html" class="eat_men">Пицца</a></td>
 							<td width="10%" class="padding_menu"><a href="drink.html" class="eat_men">Напитки</a></td>
-							<td width="10%" class="padding_menu">Десерты</td>
+							<td width="10%" class="padding_menu"><a href="sweet.html" class="eat_men">Десерты</a></td>
 							<td></td>
 						</tr>
 					</table>
@@ -66,6 +66,14 @@
 							<td><img src="img/Pizza6.png" width="100%"></td>
 							<td width="15%"></td>
 						</tr>
+						<table width="100%">
+							<tr>
+								<td>
+									<img src="img/Pizza18.png" width="100%">
+								</td>
+							</tr>
+						</table>
+				      	  
 
 					</table>
 </html>
