--- a/Пиццаландия2/sweet.html
+++ b/Пиццаландия2/sweet.html
@@ -4,12 +4,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style/style.css">
-	<title>Напитки</title>
+	<title>Десерты</title>
 </head>
 <body>
 
 </body>
-       <table width="100%">
+        <table width="100%">
 			<tr>
 				<td>
 					<table class="orange_fon" width="100%">
@@ -33,40 +33,28 @@
 					<table style="background-color: #FF9900;" width="100%">
 						<tr>
 							<td width="15%"></td>
-							<td><img src="img/Pizza7.png" width="100%"></td>
+							<td><img src="img/Pizza13.png" width="100%"></td>
 							<td width="15%"></td>
 						</tr>
 
 						<tr>
 							<td width="15%"></td>
-							<td><img src="img/Pizza8.png" width="100%"></td>
+							<td><img src="img/Pizza14.png" width="100%"></td>
 							<td width="15%"></td>
 						</tr>
 
 						<tr>
 							<td width="15%"></td>
-							<td><img src="img/Pizza9.png" width="100%"></td>
+							<td><img src="img/Pizza15.png" width="100%"></td>
 							<td width="15%"></td>
 						</tr>
 
 						<tr>
 							<td width="15%"></td>
-							<td><img src="img/Pizza10.png" width="100%"></td>
+							<td><img src="img/Pizza16.png" width="100%"></td>
 							<td width="15%"></td>
 						</tr>
 
-						<tr>
-							<td width="15%"></td>
-							<td><img src="img/Pizza11.png" width="100%"></td>
-							<td width="15%"></td>
-						</tr>
-
-						<tr>
-							<td width="15%"></td>
-							<td><img src="img/Pizza12.png" width="100%"></td>
-							<td width="15%"></td>
-						</tr>
-						
 						<table width="100%">
 							<tr>
 								<td>
@@ -74,6 +62,7 @@
 								</td>
 							</tr>
 						</table>
+
 
 					</table>
 </html>
